fix: Remove overflow-hidden from shadow-block

--- a/app/assets/stylesheets/general/_general.scss
+++ b/app/assets/stylesheets/general/_general.scss
@@ -125,7 +125,6 @@ strong {
   border-radius: $border-radius;
   box-shadow: $shadow;
   margin: $margin / 4 0;
-  overflow: hidden;
 }
 
 .empty-button {
